--- a/app/src/main/res/drawable/ic_wordit_foreground.xml
+++ b/app/src/main/res/drawable/ic_wordit_foreground.xml
@@ -1,17 +1,29 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-  <group android:scaleX="0.13078125"
-      android:scaleY="0.13078125"
-      android:translateX="20.52"
-      android:translateY="20.52">
+  <group android:scaleX="0.14132813"
+      android:scaleY="0.14132813"
+      android:translateX="17.82"
+      android:translateY="17.82">
     <path
-        android:pathData="M0,0h512v512h-512z"
-        android:fillColor="#0028FD"/>
+        android:pathData="M0,0h512v512h-512z">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="256"
+            android:startY="0"
+            android:endX="256"
+            android:endY="512"
+            android:type="linear">
+          <item android:offset="0" android:color="#FF000AFF"/>
+          <item android:offset="1" android:color="#FFFAFF00"/>
+        </gradient>
+      </aapt:attr>
+    </path>
     <path
-        android:pathData="M135.33,344.9L184.89,127.17H213.43L224.71,154.17L171.9,376H140.63L135.33,344.9ZM116.02,127.17L157.55,345.92L150.37,376H114.82L60.82,127.17H116.02ZM260.09,344.73L301.1,127.17H356.13L302.13,376H266.92L260.09,344.73ZM232.06,127.17L282.31,346.09L276.49,376H245.39L191.73,154L203.52,127.17H232.06ZM439.02,127.17L432.52,298.58H388.6L382.11,127.17H439.02ZM380.57,351.73C380.57,344.1 383.31,337.66 388.77,332.42C394.24,327.18 401.48,324.56 410.48,324.56C419.37,324.56 426.49,327.18 431.84,332.42C437.31,337.66 440.05,344.1 440.05,351.73C440.05,359.48 437.31,365.97 431.84,371.21C426.49,376.34 419.37,378.9 410.48,378.9C401.48,378.9 394.24,376.34 388.77,371.21C383.31,365.97 380.57,359.48 380.57,351.73Z"
-        android:fillColor="#FAFF00"/>
+        android:pathData="M139.33,352.9L188.89,135.17H217.43L228.71,162.17L175.9,384H144.63L139.33,352.9ZM120.02,135.17L161.55,353.92L154.37,384H118.82L64.82,135.17H120.02ZM264.09,352.73L305.1,135.17H360.13L306.13,384H270.92L264.09,352.73ZM236.06,135.17L286.31,354.09L280.49,384H249.39L195.73,162L207.52,135.17H236.06ZM443.02,135.17L436.52,306.58H392.6L386.11,135.17H443.02ZM384.57,359.73C384.57,352.1 387.31,345.66 392.77,340.42C398.24,335.18 405.48,332.56 414.48,332.56C423.37,332.56 430.49,335.18 435.84,340.42C441.31,345.66 444.05,352.1 444.05,359.73C444.05,367.48 441.31,373.97 435.84,379.21C430.49,384.34 423.37,386.9 414.48,386.9C405.48,386.9 398.24,384.34 392.77,379.21C387.31,373.97 384.57,367.48 384.57,359.73Z"
+        android:fillColor="#ffffff"/>
   </group>
 </vector>
