--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,110 @@
 <!--        app:layout_constraintBottom_toBottomOf="parent"/>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/star_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/square_yellow"
+        android:elevation="5dp"
+        android:layout_marginHorizontal="5dp"
+        app:layout_constraintTop_toTopOf="@id/container1"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/text_share1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/yellow"
+            android:textSize="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/text_share2"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:text=" If you really like this game, please:"/>
+
+        <TextView
+            android:id="@+id/text_share2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/yellow"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@id/text_share1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/text_share3"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="1. Share it with family and friends"/>
+
+        <TextView
+            android:id="@+id/text_share3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/yellow"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@id/text_share2"
+            app:layout_constraintBottom_toTopOf="@id/text_share4"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="2. Express your opinion in a review"/>
+
+        <TextView
+            android:id="@+id/text_share4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/yellow"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@id/text_share3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:text="3. Try the PRO version"/>
+
+
+
+        <ImageButton
+            android:id="@+id/share_button"
+            android:layout_width="30dp"
+            android:layout_height="32dp"
+            android:background="@drawable/ic_share_icon"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintTop_toTopOf="@id/text_share2"
+            app:layout_constraintBottom_toBottomOf="@id/text_share2"
+            />
+
+        <ImageButton
+            android:id="@+id/review_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@mipmap/ic_wordit"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintTop_toTopOf="@id/text_share3"
+            app:layout_constraintBottom_toBottomOf="@id/text_share3"
+            />
+
+        <ImageButton
+            android:id="@+id/pro_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@mipmap/ic_wordit_pro"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"
+            app:layout_constraintTop_toTopOf="@id/text_share4"
+            app:layout_constraintBottom_toBottomOf="@id/text_share4"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/blur"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -39,7 +143,7 @@
         android:background="@drawable/square_yellow"
         app:layout_constraintTop_toTopOf="@id/container1"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <TextView
             android:id="@+id/stats_title1"
@@ -775,12 +879,11 @@
             android:id="@+id/button"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="W!"
+            android:text="PLAY"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textStyle="bold"
             android:textColor="@color/yellow"
-            android:textSize="35dp"
+            android:textSize="25dp"
             android:background="@drawable/square_blue"
             app:layout_constraintBottom_toBottomOf="@id/let_14"
             app:layout_constraintEnd_toEndOf="@id/plug"
@@ -1717,7 +1820,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:padding="5dp"
         android:background="@color/theme121212"
         android:elevation="4dp"
@@ -1726,12 +1829,12 @@
         <TextView
             android:id="@+id/app_name"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/app_name"
             android:textColor="@color/white"
-            android:textSize="40dp"
-            android:textStyle="bold"
+            android:textSize="37dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -1817,15 +1920,17 @@
             android:textSize="35dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/p6"
+            app:layout_constraintEnd_toStartOf="@id/rules"
             app:layout_constraintStart_toEndOf="@id/p4"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
+        <ImageView
             android:id="@+id/p6"
             android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="2dp"
+            android:layout_height="29dp"
+            android:layout_marginHorizontal="2dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/star_pro"
             android:background="@drawable/square_blue"
             android:backgroundTint="@color/transparent"
             android:gravity="center"
@@ -1834,8 +1939,8 @@
             android:textSize="35dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rules"
-            app:layout_constraintStart_toEndOf="@id/p5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/statistics"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -1848,7 +1953,7 @@
             android:text="\?"
             android:textColor="@color/white"
             android:textSize="30dp"
-            app:layout_constraintStart_toEndOf="@id/p6"
+            app:layout_constraintStart_toEndOf="@id/p5"
             app:layout_constraintEnd_toStartOf="@id/statistics"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -1864,7 +1969,7 @@
             android:textColor="@color/white"
             android:textSize="30dp"
             app:layout_constraintStart_toEndOf="@id/rules"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/p6"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -1875,7 +1980,7 @@
         android:layout_height="wrap_content"
         android:background="@color/theme121212"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="10dp">
 
         <Button
             android:id="@+id/letter_q"
