--- a/app/src/main/res/layout/rules_start.xml
+++ b/app/src/main/res/layout/rules_start.xml
@@ -96,13 +96,12 @@
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:textColor="@color/yellow"
-        android:textSize="35dp"
-        android:textStyle="bold"
+        android:textSize="25dp"
         android:layout_marginStart="10dp"
         android:background="@drawable/square_blue"
         app:layout_constraintBottom_toBottomOf="@id/text_wordit"
         app:layout_constraintTop_toTopOf="@id/text_wordit"
         app:layout_constraintLeft_toRightOf="@id/text_wordit"
-        android:text="W!"/>
+        android:text="PLAY"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
