--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/yellow"
-            android:textSize="20dp"
+            android:textSize="17dp"
             app:layout_constraintTop_toBottomOf="@id/text_share1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toTopOf="@id/text_share3"
@@ -64,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/yellow"
-            android:textSize="20dp"
+            android:textSize="17dp"
             app:layout_constraintTop_toBottomOf="@id/text_share2"
             app:layout_constraintBottom_toTopOf="@id/text_share4"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/yellow"
-            android:textSize="20dp"
+            android:textSize="17dp"
             app:layout_constraintTop_toBottomOf="@id/text_share3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -102,22 +102,22 @@
 
         <ImageButton
             android:id="@+id/review_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@mipmap/ic_wordit"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="15dp"
+            app:layout_constraintRight_toRightOf="@id/share_button"
+            app:layout_constraintLeft_toLeftOf="@id/share_button"
             app:layout_constraintTop_toTopOf="@id/text_share3"
             app:layout_constraintBottom_toBottomOf="@id/text_share3"
             />
 
         <ImageButton
             android:id="@+id/pro_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@mipmap/ic_wordit_pro"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="15dp"
+            app:layout_constraintRight_toRightOf="@id/share_button"
+            app:layout_constraintLeft_toLeftOf="@id/share_button"
             app:layout_constraintTop_toTopOf="@id/text_share4"
             app:layout_constraintBottom_toBottomOf="@id/text_share4"
             />
